M-AGE # 19- UNSTABLE - Habitat rework test 2

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1882,6 +1882,24 @@ l_english:
 	mod_job_tec_transcendent_per_pop:0 "§G+1§! $job_tec_transcendent$ Job per $VALUE$ Pops"
 	mod_job_tec_transcendent_per_pop_short:0 "\n§G+1§! £mod_job_tec_transcendent_add£ per $VALUE$ £pop£"
  # /
+ # ------------------------------------------------- Habitat logistic
+	job_tec_megastructure_logistician:0 "Megastructural Logistician"
+	job_tec_megastructure_logistician_plural:0 "$job_tec_megastructure_logistician$s"
+	job_tec_megastructure_logistician_desc:0 "Assigned to the control, maintenance and optimization of local superstructures, their job is incessant."
+	job_tec_megastructure_logistician_effect_desc:0 "£job_tec_megastructure_logistician£ $job_tec_megastructure_logistician_plural$ convert $tec_loc_alloys$ into local §Y$tec_loc_energy_icon$ Megastructure Output§!, §Y$tec_loc_energy_icon$ Sub-Habitat production§! and §Y$tec_loc_physics_icon$ $tec_loc_engineering_icon$ Research§!."
+	mod_job_tec_megastructure_logistician_add:0 "$job_tec_megastructure_logistician$ Jobs"
+	mod_job_tec_megastructure_logistician_per_pop:0 "§G+1§! $job_tec_megastructure_logistician$ Job per $VALUE$ Pops"
+	mod_job_tec_megastructure_logistician_per_pop_short:0 "\n§G+1§! £mod_job_tec_megastructure_logistician_add£ per $VALUE$ £pop£"
+
+
+	job_tec_megastructure_logistician_drone:0 "Megastructural Drone"
+	job_tec_megastructure_logistician_drone_plural:0 "Megastructural Drones"
+	job_tec_megastructure_logistician_drone_desc:0 "The ceaseless work of these drones ensure the correct functionality of local superstructures."
+	job_tec_megastructure_logistician_drone_effect_desc:0 "£job_tec_megastructure_logistician_drone£ $job_tec_megastructure_logistician_drone_plural$ convert $tec_loc_alloys$ into local §Y$tec_loc_energy_icon$ Megastructure Output§!, §Y$tec_loc_energy_icon$ Sub-Habitat production§! and §Y$tec_loc_physics_icon$ $tec_loc_engineering_icon$ Research§!."
+	mod_job_tec_megastructure_logistician_drone_add:0 "$job_tec_megastructure_logistician_drone$ Jobs"
+	mod_job_tec_megastructure_logistician_drone_per_pop:0 "§G+1§! $job_tec_megastructure_logistician_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_megastructure_logistician_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_megastructure_logistician_drone_add£ per $VALUE$ £pop£"
+ # /
 
  # ------------------------------------------------- Flagship representatives
 	building_tec_commercial_flagship:0 "Commercial Flagship"
