--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1024,6 +1024,10 @@ l_english:
  # /
 
  # ------------------------------------------------- Habitats
+	district_tec_hab_factory:0 "Factory District"
+	district_tec_hab_factory_plural:0 "Factory Districts"
+	district_tec_hab_factory_desc:0 "Industrial replicators fills this habitat district, taking full advantage of the benefits of low gravity for easy manufacturing of goods."
+
 	district_tec_hab_logistic:0 "Orbital Logistics District"
 	district_tec_hab_logistic_plural:0 "$district_tec_hab_extraction$s"
 	district_tec_hab_logistic_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
