--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -320,12 +320,17 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 # --------------- Sub-Habitats
  # Types
 	tec_requires_habitat_central_complex_colonized:0 "$TRIGGER_FAIL$§RRequires a colonized $habitat_central_complex$ present in the system§!"
+	tec_requires_deposits_or_food:0 "$TRIGGER_FAIL$§RRequires harvestable resources ($tec_loc_energy_icon$ $tec_loc_minerals_icon$) deposits on the planet, or a resource-less Gas Giant or Frozen World ($tec_loc_food_icon$)§!"
+	tec_requires_subhabitat_free_limit:0 "$TRIGGER_FAIL$§RRequires §Y4§! or less Sub-Habitats on the System."
 
 	TEC_SUBHABITAT_NAME: "[FROM.from.planet.GetName] Sub-Habitat"
 
+	TOAST_TEC_SUBHABITAT_BUILT_TITLE: "Sub-Habitat Built"
+	TOAST_TEC_SUBHABITAT_BUILT_DESC: "A $tec_subhabitat_standard$ has been constructed in orbit of [target_planet.GetName]"
+
 	tec_subhabitat_standard:0 "Proxy Sub-Habitat"
 	tec_subhabitat_standard_DESC:0 "$tec_subhabitat_standard$"
-	tec_subhabitat_standard_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nThe §YSub-Station§! will adapt its §YType and Production§! to the §Y$tec_loc_deposits$§! of the celestial body where they are constructed, or future deposits when created."
+	tec_subhabitat_standard_MEGASTRUCTURE_DETAILS:0 "A massive station serving as operative proxy of the system central habitat.\nThe §YSub-Habitat§! will change based on the §Y£tec_deposit£ Harvestable Deposits§!, or produce §Y$tec_loc_food$§! on §HGas Giants§! and §YFrozen§! Worlds."
 
 	TEC_SUBHABITAT_ENERGY_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_energy$"
 	tec_subhabitat_energy:0 "Generator Sub-Habitat"
@@ -342,7 +347,7 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	tec_subhabitat_extraction_DESC:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nOrbiting a resource-rich celestial body, it is specialized in §Y$tec_loc_energy$§! and §Y$tec_loc_minerals$§! production."
 
-	TEC_SUBHABITAT_FOOD_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_food$"
+	TEC_SUBHABITAT_FOOD_NAME:0 "[FROM.from.planet.GetName] $tec_subhabitat_food$"
 	tec_subhabitat_food:0 "Hydroponic Sub-Habitat"
 	tec_subhabitat_food_DESC:0 "$tec_subhabitat_food$"
 	tec_subhabitat_food_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nFilled with massive hydroponic towers, it is specialized in §Y$tec_loc_food$§! production."
