--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -31,9 +31,12 @@
 	tec_loc_desc_separator: "-----------"
 	tec_loc_warning:0 "£trigger_tec_warning£"
 
-	tec_loc_energy:0 "£energy£ Energy"
-	tec_loc_minerals:0 "£minerals£ Minerals"
-	tec_loc_food:0 "£food£ Food"
+	tec_loc_energy:0 "$tec_loc_energy_icon$ Energy"
+	tec_loc_energy_icon:0 "£energy£"
+	tec_loc_minerals:0 "$tec_loc_minerals_icon$ Minerals"
+	tec_loc_minerals_icon:0 "£minerals£"
+	tec_loc_food:0 "$tec_loc_food_icon$ Food"
+	tec_loc_food_icon:0 "£food£"
 	tec_loc_alloys:0 "£alloys£ Alloys"
 	tec_loc_consumer_goods:0 "£consumer_goods£ Consumer Goods"
 	tec_loc_cg:0 "$tec_loc_consumer_goods$"
@@ -53,13 +56,12 @@
 	tec_loc_industrial_resource:0 "£alloys£ £consumer_goods£ Manufactured Resource"
 	tec_loc_industrial_resources:0 "£alloys£ £consumer_goods£ Manufactured Resources"
 
-
-	tec_loc_engineering:0 "$tec_loc_engineering_icon$ $engineering_research$"
-	tec_loc_society:0 "$tec_loc_society_icon$ $society_research$"
 	tec_loc_physics:0 "$tec_loc_physics_icon$ $physics_research$"
-	tec_loc_engineering_icon:0 "£engineering£"
-	tec_loc_society_icon:0 "£society£"
+	tec_loc_society:0 "$tec_loc_society_icon$ $society_research$"
+	tec_loc_engineering:0 "$tec_loc_engineering_icon$ $engineering_research$"
 	tec_loc_physics_icon:0 "£physics£"
+	tec_loc_society_icon:0 "£society£"
+	tec_loc_engineering_icon:0 "£engineering£"
 	tec_loc_research_resources_icon:0 "£trigger_tec_research£"
 	tec_loc_research_resources:0 "£trigger_tec_research£ Research"
 	tec_loc_research_speed:0 "£job_researcher£ Research Speed"
@@ -539,6 +541,11 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
  modifier_tec_debug_automodding:0 "z-DEBUG-AUTOMODDING"
  modifier_tec_debug_automodding_desc:0 "a"
  modifier_tec_debug_automodding_tooltip:0 "a"
+
+ modifier_tec_debug_mega_output:0 "modifier_tec_debug_mega_output"
+ modifier_tec_debug_mega_output_desc:0 "a"
+ modifier_tec_debug_mega_output_tooltip:0 "a"
+
 
 # Debug Windows
 tec_debug_no:0 "§RNo§!"
