M-AGE # 20- UNSTABLE - Habitat rework test 3 (fixes)

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -41,7 +41,7 @@ l_english:
 	mod_tec_subhabitat_physics_research_add:0 "$tec_loc_physics$ from $tec_subhabitat_physics$s"
 	mod_tec_subhabitat_society_research_add:0 "$tec_loc_society$ from $tec_subhabitat_society$s"
 	mod_tec_subhabitat_engineering_research_add:0 "$tec_loc_engineering$ from $tec_subhabitat_engineering$s"
-	mod_tec_subhabitat_research_add:0 "$tec_loc_research_resources$ from $tec_subhabitat_sciences$s"
+	mod_tec_subhabitat_research_add:0 "$tec_loc_research_resources$ from $tec_subhabitat_science$s"
 	mod_tec_subhabitat_all_add:0 "All resources from $tec_subhabitat_standard$s"
  # /
 
