M-AGE # 23- UNSTABLE - Habitat rework test 6 (merge and polish)

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -329,8 +329,12 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	TOAST_TEC_SUBHABITAT_BUILT_DESC: "A $tec_subhabitat_standard$ has been constructed in orbit of [target_planet.GetName]"
 
 	tec_subhabitat_standard:0 "Proxy Sub-Habitat"
+	tec_subhabitat_standard_NAME:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_standard_DESC:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_standard_MEGASTRUCTURE_DETAILS:0 "A massive station serving as operative proxy of the system central habitat.\nThe §YSub-Habitat§! will change based on the §Y£tec_deposit£ Harvestable Deposits§!, or produce §Y$tec_loc_food$§! on §HGas Giants§! and §YFrozen§! Worlds."
+	tec_subhabitat_standard_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$$tec_subhabitat_standard_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$$orbital_DELAYED_START$$tec_subhabitat_standard_effect$"
+	tec_subhabitat_standard_requirements: "$NEW_LINE$- Must be built in orbit of any planetary body with a resource deposit$NEW_LINE$- A max of 4 $tec_subhabitat_standard$ can be built per system"
+	tec_subhabitat_standard_effect: "§YPer habitat upgrade:§!\n$tt$- £mod_planet_max_districts_add£ $MOD_PLANET_MAX_DISTRICTS_ADD$: §G+1§!\n$tt$- £mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$: §G+0.50§!\n    - §YDepending on planetary deposit:§!\n$tt$- $mod_tec_subhabitat_research_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_energy_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_minerals_add$: §G+3§!"
 
 	TEC_SUBHABITAT_ENERGY_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_energy$"
 	tec_subhabitat_energy:0 "Generator Sub-Habitat"
