--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -336,81 +336,82 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	tec_subhabitat_standard_requirements: "$NEW_LINE$- Must be built in orbit of any planetary body with a resource deposit$NEW_LINE$- A max of 4 $tec_subhabitat_standard$ can be built per system"
 	tec_subhabitat_standard_effect: "§YPer habitat upgrade:§!\n$tt$- £mod_planet_max_districts_add£ $MOD_PLANET_MAX_DISTRICTS_ADD$: §G+1§!\n$tt$- £mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$: §G+0.50§!\n    - §YDepending on planetary deposit:§!\n$tt$- $mod_tec_subhabitat_research_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_energy_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_minerals_add$: §G+3§!"
 
-	TEC_SUBHABITAT_ENERGY_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_energy$"
-	tec_subhabitat_energy:0 "Generator Sub-Habitat"
-	tec_subhabitat_energy_DESC:0 "$tec_subhabitat_energy$"
+	TEC_SUBHABITAT_ENERGY_NAME: "[FROM.from.planet.GetName] Generator Sub-Habitat"
+	tec_subhabitat_energy:0 "$tec_subhabitat_energy_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_energy_DESC:0 "$tec_subhabitat_energy_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_energy_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nAllowing the connection and storage of massive dynamos and batteries, It is specialized in §Y$tec_loc_energy$§! production."
 
-	TEC_SUBHABITAT_MINERALS_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_minerals$"
-	tec_subhabitat_minerals:0 "Mining Sub-Habitat"
-	tec_subhabitat_minerals_DESC:0 "$tec_subhabitat_minerals$"
+	TEC_SUBHABITAT_MINERALS_NAME: "[FROM.from.planet.GetName] Mining Sub-Habitat"
+	tec_subhabitat_minerals:0 "$tec_subhabitat_minerals_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_minerals_DESC:0 "$tec_subhabitat_minerals_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_minerals_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nServing as anchorage for resource extraction and processing, it is specialized in §Y$tec_loc_minerals$§! production."
 
-	TEC_SUBHABITAT_EXTRACTION_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_extraction$"
-	tec_subhabitat_extraction:0 "Extraction Sub-Habitat"
-	tec_subhabitat_extraction_DESC:0 "$tec_subhabitat_standard$"
+	TEC_SUBHABITAT_EXTRACTION_NAME: "[FROM.from.planet.GetName] Extraction Sub-Habitat"
+	tec_subhabitat_extraction:0 "$tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_extraction_DESC:0 "$tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nOrbiting a resource-rich celestial body, it is specialized in §Y$tec_loc_energy$§! and §Y$tec_loc_minerals$§! production."
 
-	TEC_SUBHABITAT_FOOD_NAME:0 "[FROM.from.planet.GetName] $tec_subhabitat_food$"
-	tec_subhabitat_food:0 "Hydroponic Sub-Habitat"
-	tec_subhabitat_food_DESC:0 "$tec_subhabitat_food$"
+	TEC_SUBHABITAT_FOOD_NAME:0 "[FROM.from.planet.GetName] Hydroponic Sub-Habitat"
+	tec_subhabitat_food:0 "$tec_subhabitat_food_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_food_DESC:0 "$tec_subhabitat_food_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_food_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nFilled with massive hydroponic towers, it is specialized in §Y$tec_loc_food$§! production."
 
-	TEC_SUBHABITAT_PHYSICS_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_physics$"
-	tec_subhabitat_physics:0 "Physics Sub-Habitat"
-	tec_subhabitat_physics_DESC:0 "$tec_subhabitat_physics$"
+	TEC_SUBHABITAT_PHYSICS_NAME: "[FROM.from.planet.GetName] Physics Sub-Habitat"
+	tec_subhabitat_physics:0 "$tec_subhabitat_physics_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_physics_DESC:0 "$tec_subhabitat_physics_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_physics_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art antigrav labs, it is specialized in §Y$tec_loc_physics$§! production."
 
-	TEC_SUBHABITAT_SOCIETY_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_society$"
-	tec_subhabitat_society:0 "Observatory Sub-Habitat"
-	tec_subhabitat_society_DESC:0 "$tec_subhabitat_society$"
+	TEC_SUBHABITAT_SOCIETY_NAME: "[FROM.from.planet.GetName] Observatory Sub-Habitat"
+	tec_subhabitat_society:0 "$tec_subhabitat_society_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_society_DESC:0 "$tec_subhabitat_society_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_society_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art development labs, it is specialized in §Y$tec_loc_society$§! production."
 
-	TEC_SUBHABITAT_ENGINEERING_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_engineering$"
-	tec_subhabitat_engineering:0 "Engineering Sub-Habitat"
-	tec_subhabitat_engineering_DESC:0 "$tec_subhabitat_engineering$"
+	TEC_SUBHABITAT_ENGINEERING_NAME: "[FROM.from.planet.GetName] Engineering Sub-Habitat"
+	tec_subhabitat_engineering:0 "$tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_engineering_DESC:0 "$tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art technical labs, it is specialized in §Y$tec_loc_society$§! production."
 
 
-	TEC_SUBHABITAT_SCIENCE_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_science$"
-	tec_subhabitat_science:0 "Scientific Sub-Habitat"
-	tec_subhabitat_science_DESC:0 "$tec_subhabitat_science$"
+	TEC_SUBHABITAT_SCIENCE_NAME: "[FROM.from.planet.GetName] Scientific Sub-Habitat"
+	tec_subhabitat_science:0 "$tec_subhabitat_science_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_science_DESC:0 "$tec_subhabitat_science_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_science_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nLocated in a particular point of interest for scientific development, it is specialized in §Y$tec_loc_research_resources$§! production."
 
-	tec_subhabitat_artifacts:0 "Archaeological Sub-Habitat"
-	tec_subhabitat_artifacts_DESC:0 "$tec_subhabitat_artifacts$"
+	TEC_SUBHABITAT_ARTIFACT_NAME:0 "[FROM.from.planet.GetName] Archaeological Sub-Habitat"
+	tec_subhabitat_artifacts:0 "$tec_subhabitat_artifacts_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_artifacts_DESC:0 "$tec_subhabitat_artifacts_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_artifacts_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nServing as main study point for ancient discoveries, it is specialized in §Y$tec_loc_minor_artifacts$§! production."
 
 	tec_subhabitat_cg:0 "Fabrication Sub-Habitat"
-	tec_subhabitat_cg_DESC:0 "$tec_subhabitat_cg$"
+	tec_subhabitat_cg_DESC:0 "$tec_subhabitat_cg_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_cg_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nHosting production and storage warehouses, it is specialized in §Y$tec_loc_cg$§! production."
 
 	tec_subhabitat_alloys:0 "Furnace Sub-Habitat"
-	tec_subhabitat_alloys_DESC:0 "$tec_subhabitat_cg$"
+	tec_subhabitat_alloys_DESC:0 "$tec_subhabitat_alloys_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_alloys_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nHosting enormous alloy foundries and forges, it is specialized in §Y$tec_loc_alloys$§! production."
 
 	tec_subhabitat_unity:0 "Social Sub-Habitat"
-	tec_subhabitat_unity_DESC:0 "$tec_subhabitat_cg$"
+	tec_subhabitat_unity_DESC:0 "$tec_subhabitat_unity_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_unity_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nIncluding several development structures and personnel, it is specialized in §Y$tec_loc_unity$§! production."
 
 	tec_subhabitat_motes:0 "Mote-Harvester Sub-Habitat"
-	tec_subhabitat_motes_DESC:0 "$tec_subhabitat_cg$"
+	tec_subhabitat_motes_DESC:0 "$tec_subhabitat_motes_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_motes_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nIncluding several development structures and personnel, it is specialized in §Y$tec_loc_volatile_motes$§! production."
 
 	tec_subhabitat_motes:0 "Gas-Extractor Sub-Habitat"
-	tec_subhabitat_motes_DESC:0 "$tec_subhabitat_cg$"
+	tec_subhabitat_motes_DESC:0 "$tec_subhabitat_motes_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_motes_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nIncluding several development structures and personnel, it is specialized in §Y$tec_loc_exotic_gases$§! production."
 
 	tec_subhabitat_motes:0 "Crystal-Collector Sub-Habitat"
-	tec_subhabitat_motes_DESC:0 "$tec_subhabitat_cg$"
-	tec_subhabitat_motes_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nIncluding several development structures and personnel, it is specialized in §Y$tec_loc_rare_crystal$§! production."
+	tec_subhabitat_motes_DESC:0 "$tec_subhabitat_motes_MEGASTRUCTURE_DETAILS$"
+	tec_subhabitat_motes_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nIncluding several development structures and personnel, it is specialized in §Y$tec_loc_rare_crystals$§! production."
 
 	tec_subhabitat_exotic:0 "Refinery Sub-Habitat"
-	tec_subhabitat_exotic_DESC:0 "$tec_subhabitat_cg$"
+	tec_subhabitat_exotic_DESC:0 "$tec_subhabitat_exotic_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_exotic_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nIncluding several development structures and personnel, it is specialized in §Y$tec_loc_strategic_resources$§! production."
 
 	tec_subhabitat_nanites:0 "Social Sub-Habitat"
-	tec_subhabitat_nanites_DESC:0 "$tec_subhabitat_cg$"
+	tec_subhabitat_nanites_DESC:0 "$tec_subhabitat_nanites_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_nanites_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nIncluding several development structures and personnel, it is specialized in §Y$tec_loc_unity$§! production."
  # /
 # /
