subhabitat loc madness fix

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -326,9 +326,10 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	TEC_SUBHABITAT_NAME: "[FROM.from.planet.GetName] Sub-Habitat"
 
 	TOAST_TEC_SUBHABITAT_BUILT_TITLE: "Sub-Habitat Built"
-	TOAST_TEC_SUBHABITAT_BUILT_DESC: "A $tec_subhabitat_standard$ has been constructed in orbit of [target_planet.GetName]"
+	TOAST_TEC_SUBHABITAT_BUILT_DESC: "A $tec_subhabitat_standard_realname$ has been constructed in orbit of [target_planet.GetName]"
 
 	tec_subhabitat_standard:0 "Proxy Sub-Habitat"
+	tec_subhabitat_standard_realname:0 "Proxy Sub-Habitat"
 	tec_subhabitat_standard_NAME:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_standard_DESC:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_standard_MEGASTRUCTURE_DETAILS:0 "A massive station serving as operative proxy of the system central habitat.\nThe §YSub-Habitat§! will change based on the §Y£tec_deposit£ Harvestable Deposits§!, or produce §Y$tec_loc_food$§! on §HGas Giants§! and §YFrozen§! Worlds."
@@ -337,47 +338,56 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	tec_subhabitat_standard_effect: "§YPer habitat upgrade:§!\n$tt$- £mod_planet_max_districts_add£ $MOD_PLANET_MAX_DISTRICTS_ADD$: §G+1§!\n$tt$- £mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$: §G+0.50§!\n    - §YDepending on planetary deposit:§!\n$tt$- $mod_tec_subhabitat_research_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_energy_add$: §G+3§!\n$tt$- $mod_tec_subhabitat_minerals_add$: §G+3§!"
 
 	TEC_SUBHABITAT_ENERGY_NAME: "[FROM.from.planet.GetName] Generator Sub-Habitat"
+	tec_subhabitat_energy_realname:0 "Generator Sub-Habitat"
 	tec_subhabitat_energy:0 "$tec_subhabitat_energy_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_energy_DESC:0 "$tec_subhabitat_energy_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_energy_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nAllowing the connection and storage of massive dynamos and batteries, It is specialized in §Y$tec_loc_energy$§! production."
 
 	TEC_SUBHABITAT_MINERALS_NAME: "[FROM.from.planet.GetName] Mining Sub-Habitat"
+	tec_subhabitat_minerals_realname:0 "Mining Sub-Habitat"
 	tec_subhabitat_minerals:0 "$tec_subhabitat_minerals_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_minerals_DESC:0 "$tec_subhabitat_minerals_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_minerals_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nServing as anchorage for resource extraction and processing, it is specialized in §Y$tec_loc_minerals$§! production."
 
 	TEC_SUBHABITAT_EXTRACTION_NAME: "[FROM.from.planet.GetName] Extraction Sub-Habitat"
+	tec_subhabitat_extraction_realname:0 "Extraction Sub-Habitat"
 	tec_subhabitat_extraction:0 "$tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_extraction_DESC:0 "$tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nOrbiting a resource-rich celestial body, it is specialized in §Y$tec_loc_energy$§! and §Y$tec_loc_minerals$§! production."
 
 	TEC_SUBHABITAT_FOOD_NAME:0 "[FROM.from.planet.GetName] Hydroponic Sub-Habitat"
+	tec_subhabitat_food_realname:0 "Hydroponic Sub-Habitat"
 	tec_subhabitat_food:0 "$tec_subhabitat_food_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_food_DESC:0 "$tec_subhabitat_food_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_food_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nFilled with massive hydroponic towers, it is specialized in §Y$tec_loc_food$§! production."
 
 	TEC_SUBHABITAT_PHYSICS_NAME: "[FROM.from.planet.GetName] Physics Sub-Habitat"
+	tec_subhabitat_physics_realname:0 "Physics Sub-Habitat"
 	tec_subhabitat_physics:0 "$tec_subhabitat_physics_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_physics_DESC:0 "$tec_subhabitat_physics_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_physics_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art antigrav labs, it is specialized in §Y$tec_loc_physics$§! production."
 
 	TEC_SUBHABITAT_SOCIETY_NAME: "[FROM.from.planet.GetName] Observatory Sub-Habitat"
+	tec_subhabitat_society_realname:0 "Observatory Sub-Habitat"
 	tec_subhabitat_society:0 "$tec_subhabitat_society_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_society_DESC:0 "$tec_subhabitat_society_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_society_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art development labs, it is specialized in §Y$tec_loc_society$§! production."
 
 	TEC_SUBHABITAT_ENGINEERING_NAME: "[FROM.from.planet.GetName] Engineering Sub-Habitat"
+	tec_subhabitat_engineering_realname:0 "Engineering Sub-Habitat"
 	tec_subhabitat_engineering:0 "$tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_engineering_DESC:0 "$tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art technical labs, it is specialized in §Y$tec_loc_society$§! production."
 
 
 	TEC_SUBHABITAT_SCIENCE_NAME: "[FROM.from.planet.GetName] Scientific Sub-Habitat"
+	tec_subhabitat_science_realname:0 "Scientific Sub-Habitat"
 	tec_subhabitat_science:0 "$tec_subhabitat_science_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_science_DESC:0 "$tec_subhabitat_science_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_science_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nLocated in a particular point of interest for scientific development, it is specialized in §Y$tec_loc_research_resources$§! production."
 
 	TEC_SUBHABITAT_ARTIFACT_NAME:0 "[FROM.from.planet.GetName] Archaeological Sub-Habitat"
+	tec_subhabitat_artifacts_realname:0 "Archaeological Sub-Habitat"
 	tec_subhabitat_artifacts:0 "$tec_subhabitat_artifacts_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_artifacts_DESC:0 "$tec_subhabitat_artifacts_MEGASTRUCTURE_DETAILS$"
 	tec_subhabitat_artifacts_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nServing as main study point for ancient discoveries, it is specialized in §Y$tec_loc_minor_artifacts$§! production."
