--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -35,14 +35,14 @@ l_english:
  # Modifiers
 	mod_tec_mega_production_mult:0 "Solar System Megastructure Output"
 
-	mod_tec_subhabitat_energy_add:0 "$tec_loc_energy$ from $tec_subhabitat_energy$s"
-	mod_tec_subhabitat_minerals_add:0 "$tec_loc_minerals$ from $tec_subhabitat_minerals$s"
-	mod_tec_subhabitat_food_add:0 "$tec_loc_food$ from $tec_subhabitat_food$s"
-	mod_tec_subhabitat_physics_research_add:0 "$tec_loc_physics$ from $tec_subhabitat_physics$s"
-	mod_tec_subhabitat_society_research_add:0 "$tec_loc_society$ from $tec_subhabitat_society$s"
-	mod_tec_subhabitat_engineering_research_add:0 "$tec_loc_engineering$ from $tec_subhabitat_engineering$s"
-	mod_tec_subhabitat_research_add:0 "$tec_loc_research_resources$ from $tec_subhabitat_science$s"
-	mod_tec_subhabitat_all_add:0 "All resources from $tec_subhabitat_standard$s"
+	mod_tec_subhabitat_energy_add:0 "$tec_loc_energy$ from $tec_subhabitat_energy_realname$s"
+	mod_tec_subhabitat_minerals_add:0 "$tec_loc_minerals$ from $tec_subhabitat_minerals_realname$s"
+	mod_tec_subhabitat_food_add:0 "$tec_loc_food$ from $tec_subhabitat_food_realname$s"
+	mod_tec_subhabitat_physics_research_add:0 "$tec_loc_physics$ from $tec_subhabitat_physics_realname$s"
+	mod_tec_subhabitat_society_research_add:0 "$tec_loc_society$ from $tec_subhabitat_society_realname$s"
+	mod_tec_subhabitat_engineering_research_add:0 "$tec_loc_engineering$ from $tec_subhabitat_engineering_realname$s"
+	mod_tec_subhabitat_research_add:0 "$tec_loc_research_resources$ from $tec_subhabitat_science_realname$s"
+	mod_tec_subhabitat_all_add:0 "All resources from $tec_subhabitat_standard_realname$s"
  # /
 
  # Job icons
