feat: hydrological tooltip and small fixes

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3804,6 +3804,8 @@ l_english:
 	mod_tec_aiauth_experience_per_month: "$tec_loc_sr_tec_ai_power$ Allocated to Experience Gain"
 
 	mod_tec_aiauth_idle_nodes_add_tooltip: "$tec_loc_ai_idle_node$ $tec_ai_power_weight$: §Y+1§!"
+	mod_tec_dummy: "§RYou should not see this - Evolved§!"
+	mod_tec_dummy_short: ""
 
 # clerk mods
 	mod_tec_job_clerk_trade_value_add: "$mod_planet_clerks_trade_value_produces_add$"
