--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -717,6 +717,8 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 # ------------------------------------------------------------
  d_tec_desiccators_deposit:0 "Hydrological Zone"
  d_tec_desiccators_deposit_desc:0 "An amalgam of recompiled hydrological assets extracted from other celestial body in order to provide a proper re-use on this colony."
+ d_tec_desiccators_deposit_triggered_tooltip: "[tec_desiccators_deposit_virtual]"
+ d_tec_desiccators_deposit_virtual_desc: "$t$Colony Count for the purpose of ['trait:trait_robot_digital_2'] Trait: §R+0.4§!"
 
  d_tec_desiccators_deposit_rw:0 "$d_tec_desiccators_deposit$"
  d_tec_desiccators_deposit_rw_desc:0 "An amalgam of recompiled hydrological assets extracted from other celestial body in order to provide a proper re-use on this arcology."
