--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -213,3 +213,7 @@
 
 	tr_synthetics_solid_state_actuators_machine:0 "Solid-State Actuators"
 	tr_synthetics_solid_state_actuators_machine_desc:0 "Machine Species Modification Points: §G+3§!"
+
+# Virtualit
+	# ------------------------------------------------------------
+	tr_virtuality_5_modifier_desc: "For each §Y[GetClerkOrMaintenanceDrone]§! on a planet:\n$t$$mod_planet_virtual_jobs_produces_mult$: §G+1%§!\nCapital Buildings provide §G+1§! §YMax District§! at §YPlanetary Ascension§! tiers §G1§!, and every multiple of §G5§!"
