--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -8,6 +8,7 @@
  TRAIT_LITHOID_BUDDING_EFFECT_EVOLVED:0 "$TRAIT_PLANTOID_BUDDING_EFFECT$\nPop $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThe §H$trait_lithoid$ Trait§! modifies this trait's effects."
  TRAIT_TIYANKI_BUDDING_EFFECT_EVOLVED:0 "Each pop working as a slave or better produces 0.05 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\nPop $tec_loc_basic_resources$ Upkeep: §R+0.3§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
+	exotic_metabolism_tooltip:2 "£exotic_gases£ Exotic Gas Upkeep: §R+0.125§!"
 # /
 
 
