fix: FE upkeeps

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -12,13 +12,12 @@
 
  BRANCH_OFFICE_BUILDING:0 "Holding Building"
  BRANCH_OFFICE_BUILDINGS:0 "Holding Buildings"
-mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preacher£ $job_preacher_plural$"
 
 # GENERIC REPLACES
 # ------------------------------------------------------------
  skill_official_delegate_tt: "§EFederation Delegate Effect:§!$TABBED_NEW_LINE$- $MOD_FEDERATION_COHESION_ADD$: §G+1§!\n\n§E[global_event_country.GetGalCommunityOrGalImperium] Delegate Effect:§!$TABBED_NEW_LINE$- $MOD_DIPLO_WEIGHT_MULT$: §G+10%§!"
- skill_official_planet_governor_tt: "-$w_basic_plural$ from Jobs: §G+$@tec_o_planet_job_output|0%$§!\n-$w_advanced_plural$ from Jobs: §G+$@tec_o_planet_job_output|0%$§!\n-$w_strategic_plural$ from Jobs: §G+$@tec_o_planet_job_output|0%$§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §G$@ec_o_planet_empire_size|0%$§!"
- skill_official_sector_governor_tt: "-$w_basic_plural$ from Jobs: §G+$@tec_o_sector_job_output|0%$§!\n-$w_advanced_plural$ from Jobs: §G+$@tec_o_sector_job_output|0%$§!\n-$w_strategic_plural$ from Jobs: §G+$@tec_o_sector_job_output|0%$§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §G$@ec_o_sector_empire_size|0%$§!"
+ skill_official_planet_governor_tt: "-$w_basic_plural$ from Jobs: §G+$@tec_o_planet_job_output|0%$§!\n-$w_advanced_plural$ from Jobs: §G+$@tec_o_planet_job_output|0%$§!\n-$w_strategic_plural$ from Jobs: §G+$@tec_o_planet_job_output|0%$§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §G$@tec_o_planet_empire_size|0%$§!"
+ skill_official_sector_governor_tt: "-$w_basic_plural$ from Jobs: §G+$@tec_o_sector_job_output|0%$§!\n-$w_advanced_plural$ from Jobs: §G+$@tec_o_sector_job_output|0%$§!\n-$w_strategic_plural$ from Jobs: §G+$@tec_o_sector_job_output|0%$§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §G$@tec_o_sector_empire_size|0%$§!"
 
 
 # GOVERNMENT Replaces
