feat: some minor optimizations in job inlines

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3363,8 +3363,7 @@ l_english:
 	job_tec_spareparts_drone_plural:0 "Manufacturer Drones"
 	job_tec_spareparts_drone_desc:0 "Slightly more autonomous and sentient drones designed to create complex cybernetic parts."
 
-	job_tec_spareparts_drone_effect_desc:0 "£job_tec_spareparts_drone£ $job_tec_spareparts_drone_plural$ convert §Y$tec_loc_alloys$§! into §Y$tec_loc_amenities$§!"
-	job_tec_spareparts_drone_cyberhive_effect_desc:0 "£job_tec_spareparts_drone£ $job_tec_spareparts_drone_plural$ convert §Y$tec_loc_alloys$§! into §Y$tec_loc_amenities$§!"
+	job_tec_spareparts_drone_effect_desc:0 "£job_tec_spareparts_drone£ $job_tec_spareparts_drone_plural$ convert §Y$tec_loc_alloys$§! into §Y$tec_loc_amenities$§! and §Y$tec_loc_habitability$§! (or §Y$mod_planet_jobs_complex_drone_produces_mult$§! on ['concept_tec_perfect_planets'], Machine, Hive or Arcology Planets)"
 
 	mod_job_tec_spareparts_drone_add:0 "$job_tec_spareparts_drone$ Jobs"
 	mod_job_tec_spareparts_drone_per_pop:0 "§G+1§! $job_tec_spareparts_drone$ Job per $VALUE$ Pops"
