--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -346,6 +346,9 @@ triggered_mod_pop_cyborg_happiness_non_cyborg: "Non-§BCyborg§!"
 mod_job_enforcer_crime_reduction: "$mod_base_planet_enforcers$ Crime Reduction"
 mod_job_enforcer_crime_reduction_short: "£crime£ Reduction"
 
+mod_pop_lifestyle_trade_value_mult: "$mod_tec_pop_lifestyle_trade_value_add$"
+mod_pop_lifestyle_trade_value_add: "$mod_tec_pop_lifestyle_trade_value_add$"
+
 # edicts
 
 edict_damn_the_consequences_effects:0 "All positive effects from §HOvertuned§! Traits are doubled, but so is the trait upkeep increase."
