M-AGE # 24- UNSTABLE - Path changes implementation 6

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -1240,12 +1240,12 @@
  gpm_tech_arcane_research_desc: "Enhanced research methodologies for to the collecting and understading of precursor technolgies."
 
 # dummy
- pc_tec_dummy: "REPLACE_ME"
- pc_tec_dummy_desc: "REPLACE_ME"
- pc_tec_dummy_adj: "REPLACE_ME"
- mod_pc_tec_dummy_habitability: "REPLACE_ME"
- trait_pc_tec_dummy_preference: "REPLACE_ME"
- trait_pc_tec_dummy_preference_desc: "REPLACE_ME"
+ pc_tec_dummy: "DUM DUM"
+ pc_tec_dummy_desc: "ME DUM DUM"
+ pc_tec_dummy_adj: "DUM DUM?"
+ mod_pc_tec_dummy_habitability: "WHY DUM DUM"
+ trait_pc_tec_dummy_preference: "WHY DUM DUM"
+ trait_pc_tec_dummy_preference_desc: "WHAT DUM DUM"
 
 # modifiers
  hyceanfloodedhabitat: "Hycean Flooded Habitat"
