M-AGE # 24.2- UNSTABLE - Path changes implementation 6 continuation

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -274,6 +274,30 @@
 	tec_loc_espionage_bypass:0 "$tec_loc_espionage_bypass_icon$ Operation Bypass"
 	tec_loc_espionage_bypass_desc:0 "$tec_loc_espionage_bypass$ is a value (%) of extra chance of overcoming target defenses and intelligence while executing a covert action on a planet or territory, delaying it's discovery until it's too late to react."
 
+
+# Situations and text icons
+# ------------------------------------------------------------
+	tec_icon_text_path_good:0 "This can lead to a §GPositive§! path."
+	tec_icon_text_path_neutral:0 "This can lead to a §YNeutral§! path."
+	tec_icon_text_path_bad:0 "This can lead to a §RBad§! path."
+
+	tec_icon_text_outcome_good:0 "This is a §GPositive§! outcome."
+	tec_icon_text_outcome_neutral:0 "This is a §YNeutral§! outcome."
+	tec_icon_text_outcome_bad:0 "This is a §RBad§! outcome."
+
+	tec_icon_text_approach_slow:0 "This is a §YSlow§! and §YSafe§! approach."
+	tec_icon_text_approach_neutral:0 "This is a §YStandard§! approach."
+	tec_icon_text_approach_fast:0 "This is a §YFast§! and §YRisky§! approach."
+
+	tec_icon_text_likes_robots:0 "This option is available as the empire §GLikes§! £job_roboticist£ Mechanic or Synthetic technologies and affairs."
+	tec_icon_text_likes_psionic:0 "This option is available as the empire §GLikes§! £job_telepath£ Psionic technologies and affairs."
+	tec_icon_text_likes_biological:0 "This option is available as the empire §GLikes§! £tec_genetics_icon£ Biological technologies and affairs."
+
+	tec_icon_text_good_relations:0 "This option is available as we have £trigger_yes£ §GGood Relations§! with the empire."
+	tec_icon_text_bad_relations:0 "This option is available as we have £trigger_no£ §RBad Relations§! with the empire."
+	tec_icon_text_war_relations:0 "This option is available as we are £job_duelist£ §YIn War§! with the empire."
+# /
+
 # --------------------------- MACHINE COMPUTING POWER --------------------------------
 	TEC_PROCESSCAP_WINDOW_TITLE: "Processing Capacity"
 	TEC_PROCESSCAP_WINDOW_DESC: "Administers the empire §YProcessing Capacity§!."
